fixes responsive spacing, add some flare

--- a/settings/style.css
+++ b/settings/style.css
@@ -2,6 +2,7 @@
   --surface: lch(10 0 0);
   --surface2: lch(6 0 0);
   --surface3: lch(20 0 0);
+  --surface4: lch(25 0 0);
   --text: lch(95 0 0);
   --text2: lch(75 0 0);
   --brand: lch(64 20 237);
@@ -9,14 +10,16 @@
   --space1: .25rem;
   --space2: .5rem;
   --space3: 1rem;
-  --space4: 2rem;
-  --space5: 3rem;
-  --space6: 6rem;
+  --space4: 1.5rem;
+  --space5: 2rem;
+  --space6: 3rem;
+  --space7: 6rem;
 
   @media (prefers-color-scheme: light) {
     --surface: lch(98 0 0);
     --surface2: lch(100 0 0);
     --surface3: lch(90 0 0);
+    --surface4: lch(85 0 0);
     --text: lch(20 0 0);
     --text2: lch(45 0 0);
     --brand: lch(64 40 237);
@@ -42,6 +45,7 @@ body {
 
   box-sizing: border-box;
   margin: 0;
+  padding-block: var(--space5);
 
   background: var(--surface);
   color: var(--text);
@@ -55,11 +59,15 @@ h1,h2,h3 {
 
 main {
   display: grid;
-  gap: var(--space5);
+  gap: var(--space6);
   padding: var(--space3);
 
   @media (width >= 540px) {
     padding: var(--space5);
+  }
+
+  @media (width >= 800px) {
+    padding: var(--space6);
   }
 
   @media (width <= 540px) {
@@ -69,9 +77,12 @@ main {
 
 form {
   display: grid;
-  gap: var(--space5) var(--space6);
+  gap: var(--space6) var(--space7);
   grid-template-columns: repeat(auto-fit, minmax(min(0px, 100%), 35ch));
-  align-items: flex-start; 
+  align-items: flex-start;
+
+  --fixed-bg-gradient: linear-gradient(
+    to bottom, red, blue);
 }
 
 section {
@@ -85,13 +96,13 @@ header {
 }
 
 fieldset {
-  border: none;
+  border: 1px solid var(--surface4);
+  background: var(--surface4);
   padding: 0;
   margin: 0;
   display: grid;
-  gap: var(--space2);
+  gap: 1px;
   border-radius: var(--space3);
-  background: var(--surface3);
   overflow: hidden;
   transition: box-shadow .3s ease;
 
@@ -101,63 +112,91 @@ fieldset {
 }
 
 input[type="range"] {
+  --track-height: .5ex;
+  --thumb-size: 3ex;
+  --thumb-offset: -1.25ex;
+
+  @media (width >= 540px) {
+    --thumb-size: 2ex;
+    --thumb-offset: -.75ex;
+  }
+
   display: block;
   width: 100%;
   margin: 1ex 0;
   appearance: none;
   background: transparent;
+  outline-offset: 5px;
 
   &::-webkit-slider-runnable-track {
     appearance: none;
-    height: .5ex;
+    height: var(--track-height);
     border-radius: 5ex;
-    background: var(--text);
+    background: var(--fixed-bg-gradient) fixed;
   }
 
   &::-moz-range-track {
     appearance: none;
-    height: .5ex;
+    height: var(--track-height);
     border-radius: 5ex;
-    background: var(--brand);
+    background: var(--fixed-bg-gradient) fixed;
   }
 
   &::-webkit-slider-thumb {
     appearance: none;
-    height: 2ex;
-    width: 2ex;
-    margin-top: -.75ex;
-    border-radius: 50%;
-    background: var(--brand);
-    box-shadow: 0 1px 3px hsl(0 0% 0% / 50%);
+    height: var(--thumb-size);
+    width: var(--thumb-size);
+    margin-top: var(--thumb-offset);
+    clip-path: ellipse();
+    background: var(--text);
     cursor: ew-resize;
   }
 
   &::-moz-range-thumb {
     appearance: none;
-    height: 2ex;
-    width: 2ex;
-    margin-top: -.75ex;
-    border-radius: 50%;
-    background: var(--brand);
-    box-shadow: 0 1px 3px hsl(0 0% 0% / 50%);
+    height: var(--thumb-size);
+    width: var(--thumb-size);
+    margin-top: var(--thumb-offset);
+    clip-path: ellipse();
+    background: var(--text);
     cursor: ew-resize;
   }
 }
 
+input[type="checkbox"] {
+  inline-size: var(--space3);
+  block-size: var(--space3);
+  outline-offset: 5px;
+}
+
 figure {
+  background: var(--surface3);
   display: grid;
   grid-template-columns: var(--space5) 1fr;
-  gap: var(--space2);
-  padding: var(--space4);
+  gap: var(--space4);
+  padding-block: var(--space3);
+  padding-inline: var(--space4);
   transition: background .1s ease;
   margin: 0;
 
+  @media (width >= 540px) {
+    grid-template-columns: var(--space7) 1fr;
+    gap: var(--space2);
+    padding-block: var(--space4);
+    padding-inline: 0 var(--space6);
+  }
+
   &:focus-within {
+    opacity: 1;
     background: var(--surface2);
     transition-duration: .2s;
 
     & svg {
-      fill: var(--brand);
+      fill: white;
+    }
+
+    & picture {
+      background: var(--fixed-bg-gradient) fixed;
     }
   }
 
@@ -170,13 +209,22 @@ figure {
     display: contents;
   }
 
+  & > picture {
+    block-size: var(--space6);
+    inline-size: var(--space6);
+    clip-path: ellipse();
+    display: inline-grid;
+    place-content: center;
+  }
+
   & > :matches(picture, input[type="checkbox"]) {
-    align-self: center;
+    place-self: center;
   }
 }
 
 small {
   color: var(--text2);
+  line-height: 1.5;
 }
 
 svg {
